syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
package bellis.backend.mobile.profile;

option go_package = 'github.com/bellis-daemon/bellis/modules/backend/app/mobile/profile';

message UserProfile{
  string email = 1;
  string createdAt = 2;
  bool isVip = 3;
  EnvoyPolicy envoy = 4;
}

message EnvoyPolicy{
  string policyID = 1;
  int32 policyType = 2;
  bool offlineAlert = 3;
  bool predictAlert = 4;
}

message NewPassword{
  string password = 1;
}

message NewEmail{
  string email = 1;
}

message Alert{
  bool OfflineAlert = 1;
  bool PredictAlert = 2;
}

message Gotify{
  string url = 1;
  string token = 2;
}

message Email{
  string address = 1;
}

service ProfileService{
  rpc GetUserProfile(google.protobuf.Empty)returns(UserProfile);
  rpc ChangePassword(NewPassword) returns(google.protobuf.Empty);
  rpc ChangeEmail(NewEmail) returns (google.protobuf.Empty);
  rpc ChangeAlert(Alert) returns(google.protobuf.Empty);
  rpc UseGotify(Gotify) returns (EnvoyPolicy);
  rpc UseEmail(Email) returns(EnvoyPolicy);
}

